Project complete, added all sections, dummy text, images. Pushing to github

--- a/index.html
+++ b/index.html
@@ -10,38 +10,114 @@
 <body>
   <div id="main-grid">
     <div id="sidebar">
-      <h1 id="sidebar-title">Dashboard</h1>
+      <h1 id="sidebar-title"><img src="Images/monitor-dashboard.png">Dashboard</h1>
       <br>
       <ul>
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><img src="Images/home.png">Home</li>
+        <li><img src="Images/account.png">Profile</li>
+        <li><img src="Images/email.png">Messages</li>
+        <li><img src="Images/history.png">History</li>
+        <li><img src="Images/clipboard-list.png">Tasks</li>
+        <li><img src="Images/account-group.png">Communities</li>
         <br>
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><img src="Images/cog-outline.png">Settings</li>
+        <li><img src="Images/phone.png">Support</li>
+        <li><img src="Images/shield-alert.png">Privacy</li>
       </ul>
     </div>
-    <div id="header">Test</div>
+    <div id="header">
+      <label for="search"><img src="Images/magnify.png"><input id="search" type="search"></label>
+      <div id="profile-div">
+        <img src="Images/bell-ring.png">
+        <img src="Images/atlas-beetle-svgrepo-com.svg" style="width: 9%; padding-right: 10px;">
+        <p style="font-weight: bold;">Beetle Juice</p>
+      </div>
+      <div id="greeting">
+        <img src="Images/atlas-beetle-svgrepo-com.svg" style="width: 12%; padding-right: 10px;">
+        <p>Hi there,<br><span>Beetle Juice (@betelgeuse)</span></p>
+      </div>
+      <div id="button-div">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </div>
     <div id="project-container">
       <div id="project-title">Your Projects</div>
-      <div class="project"><p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
-      <div class="project">Test</div>
-      <div class="project">Test</div>
-      <div class="project">Test</div>
-      <div class="project">Test</div>
-      <div class="project">Test</div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="project-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+        <div class="project-icons">
+          <button><img src="Images/star-plus.png"></button>
+          <button><img src="Images/eye-plus.png"></button>
+          <button><img src="Images/share-variant.png"></button>
+        </div>
+      </div>
     </div>
     <div id="announcements">
       <div id="announcements-title">Announcements</div>
-      <div class="announcement"><h4>Site Maintenance</h4></div>
-      <div class="announcement"><h4>Community Share Day</h4></div>
-      <div class="announcement"><h4>Updated Privacy Policy</h4></div>
+      <div id="announcement-wrapper">
+        <div class="announcement">
+          <h4>Site Maintenance</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+        </div>
+        <div class="announcement border-top-gray">
+          <h4>Community Share Day</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+        </div>
+        <div class="announcement border-top-gray">
+          <h4>Updated Privacy Policy</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+        </div>
+      </div>
     </div>
-    <div id="trending">Test</div>
+    <div id="trending">
+      <div><h4>Trending</h4></div>
+      <div id="trending-wrapper">
+        <div class="trend"><img src="Images/apatosaurus-svgrepo-com.svg" style="width: 20%"><p>@Bracci_O<br>Aspiring cereal mascot</p></div>
+        <div class="trend"><img src="Images/bass-svgrepo-com.svg" style="width: 20%">@Bubble_Bass22<br>Avid Spongebob fan</div>
+        <div class="trend"><img src="Images/anaconda-40488-svgrepo-com.svg" style="width: 20%">@My_Anaconda_Dont<br>Boa model for Hip-Hop artists</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
